fixed mobile menu on iOs

--- a/css/app.css
+++ b/css/app.css
@@ -77,7 +77,7 @@
 /*HERO*/
 
 	#hero-index, #hero-example{
-		background: url('../assets/berlin.jpg') center center;
+		background: url('../assets/berlin.JPG') center center;
 	}
 
 	#hero-contact, #hero-about, #hero-resume {
@@ -264,6 +264,7 @@
 		/*DISPLAY MENU*/
 
 			.hamburger{
+				cursor: pointer;
 				z-index: 600;
 				height: 100%;
 				display: none;	
@@ -832,6 +833,7 @@
 	}
 
 	.return{
+		cursor: pointer;
 		width: 100%;
 		text-align: center;
 		margin-top: -2em;
